flutter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flutter-web
  namespace: healthlink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flutter-web
  template:
    metadata:
      labels:
        app: flutter-web
    spec:
      containers:
      - name: flutter-web
        image: flutter-frontend
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: flutter-web
  namespace: healthlink
spec:
  selector:
    app: flutter-web
  ports:
  - port: 9000
    targetPort: 9000
  type: NodePort
