spring-boot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot
  namespace: healthlink
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot
  template:
    metadata:
      labels:
        app: spring-boot
    spec:
      containers:
      - name: spring-boot
        image: spring-backend
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot
  namespace: healthlink
spec:
  selector:
    app: spring-boot
  ports:
  - port: 5000
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
