ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthlink-ingress
  namespace: healthlink
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: spring-boot
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flutter-web
            port:
              number: 9000
